[CSS] Fixed footer responsiveness, since its content wouldn't wrap up from insuficient space for all of its content

--- a/public/assets/default_theme/css/widgets/sections.css
+++ b/public/assets/default_theme/css/widgets/sections.css
@@ -287,13 +287,3 @@ textarea.form-row-widget {
     margin-top: 6px;
     margin-bottom: 6px;
 }
-
-.footer ul {
-    display: inline-flex;
-    width: 100%;
-    justify-content: flex-start;
-}
-
-.footer ul li {
-    margin-right: 5px;
-}
